--- a/Views/Progetto/Delete.cshtml
+++ b/Views/Progetto/Delete.cshtml
@@ -5,7 +5,8 @@ var contNessus= 0;
 var contOpenVAS = 0;
 var contDnsRecon = 0;
 var contDroope = 0;
-var contInfoga = 0;}
+var contInfoga = 0;
+var contWapiti = 0;}
 
 <h2>Sei sicuro di voler cancellare il progetto @Html.DisplayFor(model => model.Nome) ? </h2>
 <hr />
@@ -52,6 +53,7 @@ var contInfoga = 0;}
                             if(item.Modulo is webmva.Models.ModuloDNSRECON){contDnsRecon++}
                             if(item.Modulo is webmva.Models.ModuloDROOPE){contDroope++}
                             if(item.Modulo is webmva.Models.ModuloINFOGA){contInfoga++}
+                            if(item.Modulo is webmva.Models.ModuloWapiti){contWapiti++}
                         }
                         @if(contNMAP!=0){
                                 
@@ -220,7 +222,35 @@ var contInfoga = 0;}
                                 }
                                 </table>
                                 </dd>    
-                        }    
+                        }  
+                         @if(contWapiti!=0){
+                                
+                             <dd><strong>Wapiti</strong></dd>
+                            <dd>
+                            <table class="table">
+                                <tr>
+                                    <th> </th>
+                                    <th>Modulo</th>
+                                    <th>Comando</th>
+                                </tr>
+                        @foreach (var item in Model.ModuliProgetto) {
+                            
+                                @if(item.Modulo is webmva.Models.ModuloWAPITI){
+                                <tr>
+                                <td></td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Nome)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Comando)
+                                    </td>
+                                </tr>
+                               
+                                }
+                                }
+                                </table>
+                                </dd>    
+                        }  
                                 
             <div class="container ">
                     <div class="form-group col-sm-6 ">
