--- a/Views/Progetto/Details.cshtml
+++ b/Views/Progetto/Details.cshtml
@@ -4,8 +4,9 @@ var contNMAP = 0;
 var contNessus= 0;
 var contOpenVAS = 0;
 var contDnsRecon = 0;
-var Droope = 0;
-var Infoga = 0;}}
+var contDroope = 0;
+var contInfoga = 0;
+var contWapiti = 0; }
 <form name="modulo">
 <
 <h2>Dettagli @Html.DisplayFor(model => model.Nome)</h2>
@@ -53,6 +54,7 @@ var Infoga = 0;}}
                             if(item.Modulo is webmva.Models.ModuloDNSRECON) {contDnsRecon++;}
                             if(item.Modulo is webmva.Models.ModuloDROOPE) {contDroope++;}
                             if(item.Modulo is webmva.Models.ModuloINFOGA) {contInfoga++;}
+                            if(item.Modulo is webmva.Models.ModuloWAPITI) {contWapiti++;}
                         }
                         @if(contNMAP!=0){
                                 
@@ -207,6 +209,34 @@ var Infoga = 0;}}
                         @foreach (var item in Model.ModuliProgetto) {
                             
                                 @if(item.Modulo is webmva.Models.ModuloINFOGA){
+                                <tr>
+                                <td></td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Nome)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Modulo.Comando)
+                                    </td>
+                                </tr>
+                               
+                                }
+                                }
+                                </table>
+                                </dd>    
+                        } 
+                         @if(contWapiti!=0){
+                                
+                            <dd>wapiti</dd>
+                            <dd>
+                            <table class="table">
+                                <tr>
+                                    <th> </th>
+                                    <th>Modulo</th>
+                                    <th>Comando</th>
+                                </tr>
+                        @foreach (var item in Model.ModuliProgetto) {
+                            
+                                @if(item.Modulo is webmva.Models.ModuloWAPITI){
                                 <tr>
                                 <td></td>
                                     <td>
